# ScientificReports2022_AdaptivePennesSimulation

./: MonitoringThermometry_MR.mlab  README.md  isolinien.mlab  mevisLabEvaluate.mlab
cmake/: CMakeLists.txt  CMakeSettings.json
include/: CoordinatesConverter.h  DataVolume.h  Debugger.h  DicomHandler.h  ExtractROI.h  LiveDataHeatSimulation.h  Matrix3D.h  NecrosisMapComputation.h  ParameterOptimization.h  Pathfinder.h  PennesHeatTransfer.h  PennesHeatTransfer_gpu.h  SimulationRessources.h  Test_cuda.h  ThermalDose.h  VesselMap.h  cuda_util.h
sources/: CoordinatesConverter.cpp  DataVolume.cpp  DicomHandler.cpp  ExtractROI.cpp  LiveDataHeatSimulation.cpp  LiveDataHeatSimulation.ui  Matrix3D.cpp  NecrosisMapComputation.cpp  ParameterOptimization.cpp  Pathfinder.cpp  PennesHeatTransfer.cpp  PennesHeatTransfer_gpu.cu  SimulationRessources.cpp  Test_cuda.cu  ThermalDose.cpp  VesselMap.cpp  main.cpp
